--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,9 +19,9 @@ jobs:
           nix_path: nixpkgs=channel:nixpkgs-unstable
 
       - name: List packages
+        id: packages
         run: |
-          export FLAKE_PACKAGES=$(nix flake show --json | jq -r '.packages["x86_64-linux"] | keys | map(".#\(.)") | .[]')
-          echo $FLAKE_PACKAGES
+          nix flake show --json | jq -r '.packages["x86_64-linux"] | keys | map(".#\(.)") | .[]' > $GITHUB_OUTPUT
 
       - name: Build packages
-        run: echo $FLAKE_PACKAGES | xargs nix build
+        run: echo "${{ steps.vars.outputs.packages }}" | xargs nix build
