--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,8 @@ jobs:
       - name: List packages
         id: packages
         run: |
-          nix flake show --json | jq -r '.packages["x86_64-linux"] | keys | map(".#\(.)") | .[]' > $GITHUB_OUTPUT
+          FLAKE_PACKAGES=$(nix flake show --json | jq -r '.packages["x86_64-linux"] | keys | map(".#\(.)") | .[]')
+          echo "LIST=$FLAKE_PACKAGES" >> $GITHUB_OUTPUT
 
       - name: Build packages
-        run: echo "${{ steps.vars.outputs.packages }}" | xargs nix build
+        run: echo "${{ steps.vars.outputs.packages.LIST }}" | xargs nix build
