--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         id: packages
         run: |
           FLAKE_PACKAGES=$(nix flake show --json | jq -r '.packages["x86_64-linux"] | keys | map(".#\(.)") | .[]')
-          echo "LIST=$FLAKE_PACKAGES" >> $GITHUB_OUTPUT
+          echo "LIST='$FLAKE_PACKAGES'" >> $GITHUB_OUTPUT
 
       - name: Build packages
         run: echo "${{ steps.vars.outputs.packages.LIST }}" | xargs nix build
