--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,10 @@ jobs:
         id: packages
         run: |
           FLAKE_PACKAGES=$(nix flake show --json | jq -r '.packages["x86_64-linux"] | keys | map(".#\(.)") | .[]')
-          echo "$FLAKE_PACKAGES"
-          echo "FLAKE_PACKAGES='$FLAKE_PACKAGES'" >> "$GITHUB_ENV"
+          echo $FLAKE_PACKAGES
+          echo "FLAKE_PACKAGES<<EOF
+          $FLAKE_PACKAGES
+          EOF" >> "$GITHUB_ENV"
 
       - name: Build packages
-        run: echo "$FLAKE_PACKAGES" | xargs nix build
+        run: echo $FLAKE_PACKAGES | xargs nix build
