--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,10 +13,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Nix
+      - name: Setup Nix
         uses: cachix/install-nix-action@v22
         with:
           nix_path: nixpkgs=channel:nixpkgs-unstable
+
+      - name: Setup Cachix
+        uses: cachix/cachix-action@v12
+        with:
+          name: sokol-flake
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
 
       - name: List packages
         id: packages
